--- a/css/about.css
+++ b/css/about.css
@@ -26,8 +26,9 @@
 	position: relative;
 	font-family: Palatino,"Palatino Linotype";
 	font-size: 3rem;
-	color: #444444;
-	margin-top: 100px;
+//	color: #444444;
+	color: #cc1111;
+	margin-top: 10%;
 //	min-width: 600px;
 //	width: 600px;
 }
