--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,8 @@
 .gray_text {color: #a0a0a0; }
 .red_text {color: #cc1111; }
 .orange_text {color: #e53300; }
+.cream_text {color: #e0cda7; }
+.green_text {color: #00712f; }
 
 /* header */
 html, body {
