--- a/css/contact.css
+++ b/css/contact.css
@@ -2,7 +2,8 @@
 
 .contact_bg {
 	position: relative;
-	background: #555f69;
+//	background: #555f69;
+	background: #F57C00;
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
