--- a/css/works.css
+++ b/css/works.css
@@ -2,7 +2,8 @@
 
 .work_bg {
 	position: relative;
-	background: #00712f; //#2a344f; //
+	//background: #00712f;
+	background: #444444;
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
@@ -10,6 +11,62 @@
 	padding: 0;
 	overflow: hidden;
 }
+.worksTblXS {
+	font-family: Helvetica, Arial;
+	font-size: 2rem;
+	font-weight: normal;
+	width: 100%;
+	height: 65%;
+	min-height: 350px;
+	text-align: center;
+	margin: 0 auto;
+	table-layout: fixed;
+}
+.worksTblXS td {
+	min-height: 150px;
+	height: 33%;
+	width: 100%;
+	overflow: hidden;
+}
+#graphNvBG,
+#artAllBG,
+#photoBG {
+	background-image: url("../img/worksBG.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#graphNvBG,
+#photoBG,
+#artAllBG {
+	width: 100%;
+	height: 100%;
+    -webkit-transition: all 1000ms ease-in-out;
+    -webkit-transform: scale(1);
+    -ms-transition: all 1000ms ease-in-out;
+    -ms-transform: scale(1);   
+    -moz-transition: all 300ms ease-in-out;
+    -moz-transform: scale(1);
+    transition: all 1000ms ease-in-out;
+    transform: scale(1);
+}
+#graphNvBG:hover,
+#photoBG:hover,
+#artAllBG:hover {
+    -webkit-transition: all 300ms ease-in-out;
+    -webkit-transform: scale(1.2);
+    -ms-transition: all 300ms ease-in-out;
+    -ms-transform: scale(1.2);   
+    -moz-transition: all 300ms ease-in-out;
+    -moz-transform: scale(1.2);
+    transition: all 1000ms ease-in-out;
+    transform: scale(1.2);
+    overflow: hidden;
+}
+
 @media (min-width: 768px) {
 
 }
