--- a/css/common.css
+++ b/css/common.css
@@ -11,6 +11,7 @@
 .black_text {color: #000000; }
 .white_text {color: #ffffff; }
 .gray_text {color: #a0a0a0; }
+.darkGray_text {color: #444444; }
 .red_text {color: #cc1111; }
 .orange_text {color: #e53300; }
 .cream_text {color: #e0cda7; }
