--- a/css/contact.css
+++ b/css/contact.css
@@ -3,7 +3,7 @@
 .contact_bg {
 	position: relative;
 //	background: #555f69;
-	background: #F57C00;
+	background: #00712f;
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
