--- a/css/works.css
+++ b/css/works.css
@@ -28,6 +28,11 @@
 	width: 100%;
 	overflow: hidden;
 }
+.worksTblXS td > div {
+	position: relative;
+	padding: 10px;
+}
+
 #graphNvBG,
 #artAllBG,
 #photoBG {
@@ -63,10 +68,13 @@
     -moz-transition: all 300ms ease-in-out;
     -moz-transform: scale(1.2);
     transition: all 1000ms ease-in-out;
-    transform: scale(1.2);
+    transform: scale(1.1);
     overflow: hidden;
 }
-
+.workType {
+	position: relative;
+	top: 50px;
+}
 @media (min-width: 768px) {
 
 }
