--- a/css/works.css
+++ b/css/works.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .work_bg {
-	position: relative;
+/*	position: relative;
 	//background: #00712f;
 	background: #444444;
 	margin-left: auto;
@@ -9,8 +9,20 @@
 	width: 100%;
 	height: 100%;
 	padding: 0;
-	overflow: hidden;
+	overflow: hidden; */
+	
+	background-image: url("../img/worksBG.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	z-index: 1;
 }
+
 .worksTblXS {
 	font-family: Helvetica, Arial;
 	font-size: 2rem;
