--- a/css/works.css
+++ b/css/works.css
@@ -1,16 +1,6 @@
 @charset "UTF-8";
 
-.work_bg {
-/*	position: relative;
-	//background: #00712f;
-	background: #444444;
-	margin-left: auto;
-	margin-right: auto;
-	width: 100%;
-	height: 100%;
-	padding: 0;
-	overflow: hidden; */
-	
+#work_bg {
 	background-image: url("../img/worksBG.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
@@ -44,48 +34,22 @@
 	position: relative;
 	padding: 10px;
 }
-
-#graphNvBG,
-#artAllBG,
-#photoBG {
-	background-image: url("../img/worksBG.jpg");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	margin-left: auto;
-	margin-right: auto;
+#clickMe {
+	cursor: url("../img/cursor4.png") 12 12, auto;
+	text-align: center;
+	padding-top: 10%;
+	animation: blinker 3s linear infinite;
 }
-
-#graphNvBG,
-#photoBG,
-#artAllBG {
-	width: 100%;
-	height: 100%;
-    -webkit-transition: all 1000ms ease-in-out;
-    -webkit-transform: scale(1);
-    -ms-transition: all 1000ms ease-in-out;
-    -ms-transform: scale(1);   
-    -moz-transition: all 300ms ease-in-out;
-    -moz-transform: scale(1);
-    transition: all 1000ms ease-in-out;
-    transform: scale(1);
+#clickMe svg {
+	fill: transparent;
+	stroke: #e0cda7;
+	width: 180px;
+	height: 180px;
 }
-#graphNvBG:hover,
-#photoBG:hover,
-#artAllBG:hover {
-    -webkit-transition: all 300ms ease-in-out;
-    -webkit-transform: scale(1.2);
-    -ms-transition: all 300ms ease-in-out;
-    -ms-transform: scale(1.2);   
-    -moz-transition: all 300ms ease-in-out;
-    -moz-transform: scale(1.2);
-    transition: all 1000ms ease-in-out;
-    transform: scale(1.1);
-    overflow: hidden;
-}
-.workType {
-	position: relative;
-	top: 50px;
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
 @media (min-width: 768px) {
 
