--- a/css/works.css
+++ b/css/works.css
@@ -4,7 +4,7 @@
 	background-image: url("../img/worksBG.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: contain; //cover;
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
@@ -35,7 +35,6 @@
 	padding: 10px;
 }
 #clickMe {
-	cursor: url("../img/cursor4.png") 12 12, auto;
 	text-align: center;
 	padding-top: 10%;
 	animation: blinker 3s linear infinite;
