--- a/css/works.css
+++ b/css/works.css
@@ -4,7 +4,7 @@
 	background-image: url("../img/worksBG.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: contain; //cover;
+	background-size: contain;
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
@@ -37,7 +37,7 @@
 #clickMe {
 	text-align: center;
 	padding-top: 10%;
-	animation: blinker 3s linear infinite;
+	animation: blinker 7s linear infinite;
 }
 #clickMe svg {
 	fill: transparent;
@@ -53,10 +53,20 @@
 @media (min-width: 768px) {
 
 }
+
+/* WORKS.HTML */
 /* workTypewriter effect */
-.workTypewriter {
-	max-width: 35rem;
-	width: 35rem;
+#graphicNovel_bg {
+	background-image: url("../img/workBG03.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	height: 500px;
+	padding: 0;
+	z-index: 1;
 }
 .workTypewriter #captureText {
 	position: relative;
@@ -68,16 +78,21 @@
 	font-family: courier new, courier;
 	font-size: 1.2rem;
 	float: left;
-	display: block;
-	animation: 
-		typing 2.5s steps(28, end),
-		blink-caret .5s step-end 4;
-	animation-delay: 0;
+	width: 0;
+	-webkit-transition: all 2.8s linear 0s;
+	transition: all 2.8s linear 0s;
+}
+.workTypewriter #captureText.type {
+	width: 35rem;;
+	/*animation:
+		typing 2.5s; 
+		//typing 2.5s steps(28),
+		//blink-caret .5s step-end 4;*/
 }
 /* The typing effect */
 @keyframes typing {
-	from { width: 0; opacity: 1;}
-	to { width: 100%; opacity: 1;}
+	0% { width: 0;}
+	100% { width: 100px;}
 }
 /* The workTypewriter cursor effect */
 @keyframes blink-caret {
