--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,13 @@ header {
 	padding: 0;
 	overflow: hidden;
 }
+#myVideo {
+	width: auto;
+	height: 100%;
+	float: right;
+	overflow: hidden;
+}
+
 /* Responsive Design */
 @media (max-width: 767px) {
 
