--- a/css/common.css
+++ b/css/common.css
@@ -36,6 +36,19 @@ a {
 	margin-left: auto;
 	margin-right: auto;
 }
+.monitor_effect {
+	position: absolute;
+	background-image: url("../img/dotseffect.png");
+	background-position: left top;
+	background-repeat: repeat;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1400px;
+	width: 100%;
+	height: 100%; 
+	padding: 0;
+	overflow: hidden;
+}
 /* Navigation */
 nav {
 	position: fixed;
