--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,18 @@
 @charset "UTF-8";
 
-.about_bg {
+.about_bg1 {
 	position: relative;
 	background: #e0cda7;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	overflow: hidden;
+}
+.about_bg2 {
+	position: relative;
+	background: #ffffff;
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
@@ -17,8 +27,10 @@
 	background-size: contain;
 	margin-left: auto;
 	margin-right: auto;
+	min-width: 600px;
+	min-height: 300px;
 	width: 100%;
-	height: 100%; 
+	height: auto; 
 	padding: 0;
 	overflow: hidden;
 }
@@ -90,6 +102,17 @@
 #go_prev svg:hover {
 	stroke: yellow;
 	cursor: url("../img/cursor4.png") 12 12, auto;
+}
+.question {
+	font-family: Times New Roman, Times;
+	font-weight: bold;
+	font-size: 16px;
+	color: #cc1111;
+}
+.answer {
+	font-family: Arial, Verdana;
+	font-size: 14px;
+	color: #666666;
 }
 .flex_container {
 	display: flex;
