--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /* Variables fijos:
-	max-width: 1400px;
+	max-width: 1200px;
 	xs-design-margin-left: 20px;
 	md-design-margin-left: 10%;
 	navbar-height: 62px;
@@ -32,7 +32,7 @@ a {
 .wrapper {
 	height: 100%;
 	width: 100%;
-	max-width: 1400px;
+	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -43,9 +43,23 @@ a {
 	background-repeat: repeat;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 1400px;
+	max-width: 1200px;
 	width: 100%;
 	height: 100%; 
+	padding: 0;
+	overflow: hidden;
+}
+.growingDots {
+	position: absolute;
+	background-image: url("../img/dots.svg");
+	background-position: left top;
+	background-repeat: repeat-y;
+	background-size: 125px auto;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1200px;
+	width: 100%;
+	height: 100%;
 	padding: 0;
 	overflow: hidden;
 }
@@ -54,7 +68,7 @@ nav {
 	position: fixed;
 	height: 62px;
 	width: 100%;
-	max-width: 1400px;
+	max-width: 1200px;
 	z-index: 2;
 	background: #000000;
 }
@@ -145,7 +159,7 @@ nav {
 	position: relative;
 	height: 100%;
 	width: 100%;
-	max-width: 1400px;
+	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 	margin: 2rem;
@@ -155,6 +169,9 @@ nav {
 	padding: 100px 20px 0px;
 	height: 100%;
 }
+.ignoreContentSpace {
+	margin: -100px -20px 0px;
+}
 @media (min-width: 768px) {
 	.contentSpace {
 		padding-top: 13%;
@@ -162,6 +179,13 @@ nav {
 		width: 80%;
 		height: 80%;
 		text-align: left;
+		float: left;
+	}
+	.ignoreContentSpace {
+		margin-top: -13%;
+		margin-left: -12%;
+		width: 100%;
+		height: 100%;
 		float: left;
 	}
 }
@@ -175,18 +199,16 @@ nav {
 }
 #goDown {
 	position: relative;
-	width: 20%;
-	height: 30px;
-	left: 40%;
-	text-align: center;
-	bottom: 30px;
 	z-index: 3;
 	-webkit-animation: vertVib 3s ease infinite;
 }
 #goDown svg {
-	stroke: #ffffff;
-	width: 40px;
-	height: 40px;
+	stroke: yellow;
+	fill: none;
+	width: 100vw;
+	height: 100vh;
+	pointer-events: fill;
+	alignment-baseline: top;
 }
 @keyframes vertVib {
   0% { transform:translateY(0); }
@@ -260,7 +282,7 @@ nav {
 	position: fixed;
 	height: 40px;
 	width: 100%;
-	max-width: 1400px;
+	max-width: 1200px;
 	bottom: 0px;
 	text-align: right;
 	z-index: 2;
@@ -280,7 +302,7 @@ footer {
 	background: #ffffff;
 	height: 100px;
 	width: 100%;
-	max-width: 1400px;
+	max-width: 1200px;
 	cursor: url("../img/cursor2.png") 12 12, auto;
 }
 .copyright {
