--- a/css/common.css
+++ b/css/common.css
@@ -13,9 +13,12 @@
 .gray_text {color: #a0a0a0; }
 .darkGray_text {color: #444444; }
 .red_text {color: #cc1111; }
+.pink_text {color: #d9a5b3; }
 .orange_text {color: #e53300; }
 .cream_text {color: #e0cda7; }
 .green_text {color: #00712f; }
+.yellow_text {color: yellow;}
+.lightblue_text {color: #c6d7eb;}
 .yellowBG {background-color: yellow;}
 
 /* header */
@@ -36,14 +39,32 @@ a {
 	margin-left: auto;
 	margin-right: auto;
 }
+.top_frame {
+	position: relative;
+	background: #ffffff;
+	height: 100%;
+	width: 100%;
+	max-width: 1200px;
+	margin-left: auto;
+	margin-right: auto;
+	//overflow: hidden; non-scroll
+}
+.half_frame {
+	position: relative;
+    //height: 100%;
+    background: #e0cda7;
+    vertical-align: top;
+    width: 100%;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+}
 .monitor_effect {
 	position: absolute;
 	background-image: url("../img/dotseffect.png");
 	background-position: left top;
 	background-repeat: repeat;
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 1200px;
 	width: 100%;
 	height: 100%; 
 	padding: 0;
@@ -165,14 +186,25 @@ nav {
 	margin: 2rem;
 	top: 100px;
 }
+.contentSpaceHalf,
 .contentSpace {
 	padding: 100px 20px 0px;
 	height: 100%;
+	//width: 100%;
 }
 .ignoreContentSpace {
 	margin: -100px -20px 0px;
 }
 @media (min-width: 768px) {
+	.half_frame {
+		position: relative;
+		width: 50%;
+		max-width: 1200px;
+		margin-left: auto;
+		margin-right: auto;
+		overflow: hidden;
+		display: inline-block;
+	}
 	.contentSpace {
 		padding-top: 13%;
 		padding-left: 10%;
@@ -181,9 +213,24 @@ nav {
 		text-align: left;
 		float: left;
 	}
+	.contentSpaceHalf {
+		padding-top: 26%;
+		padding-left: 20%;
+		width: 80%;
+		height: 80%;
+		text-align: left;
+		float: left;
+	}
 	.ignoreContentSpace {
 		margin-top: -13%;
-		margin-left: -12%;
+		margin-left: -22%;
+		width: 100%;
+		height: 100%;
+		float: left;
+	}
+	.ignoreContentSpaceHalf {
+		margin-top: 10%;
+		margin-left: -22%;
 		width: 100%;
 		height: 100%;
 		float: left;
@@ -198,17 +245,19 @@ nav {
  // top: -62px;
 }
 #goDown {
-	position: relative;
+	position: absolute;
+	left: 50%;
+	bottom: 3%;
+	width: 40px;
+	height: 30px;
+	margin-left: -20px;
 	z-index: 3;
 	-webkit-animation: vertVib 3s ease infinite;
+	overflow: hidden;
 }
 #goDown svg {
 	stroke: yellow;
 	fill: none;
-	width: 100vw;
-	height: 100vh;
-	pointer-events: fill;
-	alignment-baseline: top;
 }
 @keyframes vertVib {
   0% { transform:translateY(0); }
