--- a/css/about.css
+++ b/css/about.css
@@ -1,23 +1,13 @@
 @charset "UTF-8";
 
-.about_bg1 {
+.about_bg {
 	position: relative;
 	background: #e0cda7;
+	//background: #1868ae;
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
-	height: 100%;
-	padding: 0;
-	overflow: hidden;
-}
-.about_bg2 {
-	position: relative;
-	background: #ffffff;
-	margin-left: auto;
-	margin-right: auto;
-	width: 100%;
-	height: 100%;
-	padding: 0;
+	height: auto;
 	overflow: hidden;
 }
 .interview_bg {
@@ -72,6 +62,9 @@
 	#babble {
 		margin-top: -100px;
 	}
+}
+.interview_bg {
+	
 }
 /* Wide content */
 #go_prev {
