--- a/css/about.css
+++ b/css/about.css
@@ -7,7 +7,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
-	height: auto;
+	height: 100%;
 	overflow: hidden;
 }
 .interview_bg {
@@ -17,7 +17,7 @@
 	background-size: contain;
 	margin-left: auto;
 	margin-right: auto;
-	min-width: 600px;
+	min-width: 100%;
 	min-height: 300px;
 	width: 100%;
 	height: auto; 
@@ -62,10 +62,11 @@
 	#babble {
 		margin-top: -100px;
 	}
+	.interview_bg {
+		min-width: 50%;
+	}
 }
-.interview_bg {
-	
-}
+
 /* Wide content */
 #go_prev {
 	position: absolute;
