--- a/css/contact.css
+++ b/css/contact.css
@@ -2,46 +2,31 @@
 
 .contact_bg {
 	position: relative;
-//	background: #555f69;
-	background: #00712f;
-	margin-left: auto;
-	margin-right: auto;
+	background: #fff;
 	width: 100%;
-	height: 100%;
-	padding: 0;
+	max-width: 1200px;
+	margin: 0 auto;
 	overflow: hidden;
 }
-.contact_form {
-	width: 100%;
-	font-family: Helvetica, Arial;
-	font-size: 1.4rem;
-	font-weight: bold;
+.contact_contents {
+	background-color: #fff;
+	margin: 0 20px;
+	height: 100%;
+	text-align: center;
 }
-.contact_form label,
-.contact_form input,
-.contact_form textarea,
-.contact_form button {
-	display: block;
-	width: 90%;
+.contact_contents .chapterName {
+	text-align: left;
 }
-.contact_form label {
-	color: #ffffff;
-}
-.contact_form input {
-	color: #a0a0a0;
-	margin-bottom: 1.4rem;
-	padding: .8rem;
-	border: solid 2px yellow;
-}
-.contact_form textarea {
-	color: #a0a0a0;
-	margin-bottom: 1.4rem;
-	padding: .8rem;
-	height: 10rem;
-	border: solid 2px yellow;
+.contact {
+	margin-top: 10px;
 }
 @media (min-width: 768px) {
-	.contact_form {
-		width: 80%;
+	.contact_contents {
+        margin-left: 10%;
+        width: 80%;
+        padding-top: 100px;
+	}
+	.contact {
+		margin-top: 50px;
 	}
 }
