--- a/css/works.css
+++ b/css/works.css
@@ -1,15 +1,15 @@
 @charset "UTF-8";
-#work_bg {
+.work_bg {
+	position: relative;
 	background-image: url("../img/worksBG.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto;
 	width: 100%;
 	height: 100%;
-	padding: 0;
 	z-index: 1;
+	overflow: hidden;
 }
 .worksTblXS {
 	font-family: Helvetica, Arial;
