--- a/css/common.css
+++ b/css/common.css
@@ -29,24 +29,19 @@ html, body {
 	font-family: Helvetica, Arial;
 	font-size: 10px;
 }
+.clearfix::after {
+	content: "";
+	display: block;
+	clear: both;
+}
 a {
 	cursor: url("../img/cursor4.png") 12 12, auto;
 }
 .wrapper {
-	height: 100%;
 	width: 100%;
+	height: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
-}
-.top_frame {
-	position: relative;
-	background: #ffffff;
-	height: 100%;
-	width: 100%;
-	max-width: 1200px;
-	margin-left: auto;
-	margin-right: auto;
-	//overflow: hidden; non-scroll
 }
 .half_frame {
 	position: relative;
@@ -85,32 +80,29 @@ a {
 nav {
 	position: fixed;
 	height: 62px;
+	line-height: 62px;
 	width: 100%;
 	max-width: 1200px;
 	z-index: 2;
-	background: #000000;
+	background: #000;
+	top: 0;
 }
 #navbar {
-	position: relative;
 	width: 80%;
-	height: 100%;
-	padding-left: 10%;
-	//padding-top: 1.4rem;
+	margin-left: 10%;
 }
-#navbar > li {
+
+#navbar ul li {
 	display: inline-block;
-	vertical-align: middle;
-	padding-right: 4rem;
-	font-size: 1.4rem;
-	font-weight: bold;
+	margin-right: 30px;
+	font-size: 16px;
 }
-#navbar > li:hover {
+#navbar ul li:hover {
 	color: yellow;
 }
-#navbar > li svg {
+#navbar ul li svg {
 	fill: transparent;
-	width: 40px;
-	height: 40px;
+	//margin-top: -13px;
 }
 #xs_nav_label {
 	cursor: url("../img/cursor4.png") 12 12, auto;
@@ -119,8 +111,6 @@ nav {
 	fill: transparent;
 	width: 40px;
 	height: 40px;
-	//margin-top: 8px ;
-	//margin-left: 3.5rem;
 	margin: 8px 20px;
 }
 .visible_checked {
@@ -153,7 +143,7 @@ nav {
 	background: rgba(55,55,55,.9);
 	z-index: 10;
 }
-#xs_navbar > ul {
+#xs_navbar ul {
 	list-style-type: none;
 	font-size: 2rem;
 	margin-top: 3rem;
@@ -187,7 +177,6 @@ nav {
 .contentSpaceTop {
 	margin: 100px 20px;
 	height: 100%;
-
 }
 .ignoreContentSpace {
 	margin: -100px -20px 0px;
@@ -243,7 +232,6 @@ nav {
 }
 .rightAlign {
 	text-align: right;
-	float: right;
 }
 .setAnchor {
   position: relative;
@@ -256,10 +244,11 @@ nav {
 	width: 40px;
 	height: 30px;
 	margin-left: -20px;
-	z-index: 3;
 	-webkit-animation: vertVib 3s ease infinite;
-	overflow: hidden;
+	display: block;
+	z-index: 3;
 }
+
 #goDown svg {
 	stroke: yellow;
 	fill: none;
@@ -319,6 +308,7 @@ nav {
 	font-family: helvetica;
 	font-size: 5.8rem;
 	line-height: 4rem;
+	padding-bottom: 50px;
 }
 .readable {
 	text-shadow: #000000 0px 0 5px;
@@ -340,7 +330,7 @@ nav {
 	bottom: 0px;
 	text-align: right;
 	z-index: 2;
-	display: none;
+	display: block;
 }
 #page_top svg {
 	fill: transparent;
@@ -388,7 +378,7 @@ footer {
 	}
 }
 /* Navigation symbols color */
-#navbar > li svg,
+#navbar ul li svg,
 #xs_nav_label svg,
 #xs_navbar svg,
 #page_top svg,
