--- a/css/work.css
+++ b/css/work.css
@@ -215,7 +215,7 @@ section dd {
 	margin: 0 auto;
 }
 
-/* PRINT */
+/* Print */
 .print_frame {
 	position: relative;
 	background: #e0bcb0;
@@ -321,6 +321,80 @@ section dd {
 .keys section dt {
 	border-bottom: 2px solid #b9d300;
 	padding: 30px 0 10px;
+}
+
+/* Illustration */
+.illustration_frame {
+	position: relative;
+	background: #98dfd6;
+	width: 100%;
+	max-width: 1200px;
+	min-height: 100%;
+	margin: 0 auto;
+	overflow: hidden;
+}
+.vector,
+.novel {
+	background-color: #fff;
+}
+.vector section,
+.novel section {
+	position: relative;
+	width: 90%;
+	background-color: #fff;
+	padding: 5px;
+	margin: 0 auto;
+	text-align: center;
+}
+.vector section .chapterNumber,
+.novel section .chapterNumber {
+	position: absolute;
+	top: -20px;
+	left: -10px;
+	margin-top:0;
+	font-family: impact, san-serif;
+	font-size: 50px;
+	line-height: .8;
+	color: #163552;
+}
+#graphicNovelImg {
+	background-image: url("../img/corvus2013.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	margin: 100px auto 0;
+	width: 100%;
+	height: 350px;
+}
+#vectorImg {
+	background-image: url("../img/work/eating-disorder.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	margin: 100px auto 0;
+	width: 100%;
+	height: 350px;
+}
+.workTypewriter {
+	margin-bottom: 50px;
+}
+.workTypewriter #captureText,
+.workTypewriter #picCapText {
+	position: relative;
+	margin-top: 50px;
+	overflow: hidden;
+	white-space: nowrap;
+	letter-spacing: .10em;
+	font-family: courier new, courier;
+	font-size: 1.2rem;
+	text-align: left;
+	width: 0;
+	-webkit-transition: all 2.8s linear 0s;
+	transition: all 2.8s linear 0s;
+}
+.workTypewriter #captureText.type,
+.workTypewriter #picCapText.type {
+	width: 35rem;
 }
 @media (min-width: 768px) {
 	article {
@@ -448,6 +522,21 @@ section dd {
 		font-size: 34px;
 		line-height: 26px;
 		margin: 50px 0;
+	}
+	.vector,
+	.novel {
+		margin-top: 50px;
+	}
+	.vector section .chapterNumber,
+	.novel section .chapterNumber {
+		top: -50px;
+		left: -60px;
+		font-size: 100px;
+		line-height: .8;
+	}
+	#vectorImg,
+	#graphicNovelImg {
+		margin: 200px auto 10px;
 	}
 }
 
